--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -15,8 +15,7 @@
     text-align: center;
     text-decoration: none;
     padding: 0.75rem;
-    width: 7vw;
-    font-size: 1vw;
+    width: 7rem;
 }
 
 .top-nav-bar .nav-link:hover{
