--- a/sass/pages/_work.scss
+++ b/sass/pages/_work.scss
@@ -1,12 +1,21 @@
 .experience-top-wrapper {
     padding: 4rem;
-    
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.50);
+    background-color: #440D0F05;
+}
+
+.experience-top-right {
+    text-align: center;
+}
+
+.experience-top-right img {
+    width: 30rem;
+    height: auto;
+    border-radius: 1rem;
 }
 
 .work-experience-wrapper, .education-wrapper {
-    padding-left: 4rem;
-    padding-right: 4rem;
-    padding-bottom: 4rem;
+    padding: 4rem;
     animation: fadeInUp;
     animation-duration: 2s;
 }
